[project]
name = "pg-mcp"
version = "0.1.0"
description = "Korean Law Data API and Vector Search System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Law API Team", email = "example@example.com"}
]
maintainers = [
    {name = "Law API Team", email = "example@example.com"}
]
keywords = ["law", "api", "crawling", "data-processing", "pgvector", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jinja2>=3.1.6",
    "openai>=1.0.0",
    "numpy>=1.20.0",
    "sentence_transformers>=2.2.2",
    "sqlalchemy>=2.0.0",
    "psycopg2>=2.9.5",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "xmltodict>=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/username/pg-mcp"
"Bug Tracker" = "https://github.com/username/pg-mcp/issues"

[project.scripts]
law-api = "pg_mcp.scripts.fetch_law_api:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
